--- a/Style.css
+++ b/Style.css
@@ -5,10 +5,6 @@ body {
   margin: 0;
 }
 
-/*header, main, footer { 
-  width: 100%;
-}*/
-
 /* =========== HEADER =========== */
 
 header {
@@ -39,6 +35,8 @@ nav a {
   color: #DAE0F2;
   font-size: 1em;
 }
+
+
 
 /* =========== MAIN =========== */
 
@@ -123,7 +121,7 @@ h4 {
 /* =========== FOOTER =========== */
 
 footer {
-  background-color: #ed1c24;
+  background-color: #ed1c23;
   color: #EFE9E7;
   font-size: 1.8em;
 }
@@ -147,4 +145,141 @@ footer {
     flex-direction: row;
     justify-content: space-between;
   }
+}
+
+
+/* =========== FENETRE MODALE =========== */
+/* Décrire l'animation */
+@keyframes slideDownFadeIN {
+  from {top:-100px;opacity: 0;}
+  to {top:0px;opacity:1;}
+}
+
+/* Foncer l'arrière-plan de la fenêtre modale */
+.modal {
+display: none; 
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+overflow: auto;
+background-color: rgb(0, 0, 0);
+background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Afficher la fenêtre modale lorsqu'elle est ciblée par un lien supprimer */
+.modal:target {
+display: table;
+position: absolute;
+}
+
+/* la fenêtre modale  */
+.modal-dialog {
+display: table-cell;
+vertical-align: top;
+}
+
+/* Le contenu de la modale */
+.modal-dialog .modal-content {
+margin: auto;
+background-color: #f3f3f3;
+position: relative;
+padding: 0;
+outline: 0;
+border: 1px #777 solid;
+text-align: justify;
+width: 30%;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+animation-name: slideDownFadeIN;
+animation-duration: 0.5s;
+}
+
+/* Bouton servant à fermer la fenêtre modale */
+.closebtn {
+text-decoration: none;
+float: left;
+font-size: 35px;
+font-weight: bold;
+color: red;
+}
+
+.closebtn:hover,
+.closebtn:focus {
+color: #000;
+text-decoration: none;
+cursor: pointer;
+}
+
+.modal-container {
+padding: 2px 16px;
+font-size: 25px;
+color: white;
+}
+
+
+/* =========== FORMULAIRE =========== */
+form {
+  max-width: 100%;
+}
+
+form label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+label.inline-label {
+  display: inline-block;
+}
+
+fieldset {
+  border: 1px solid lightgray;
+  background-color: rgba(225, 233, 255, 0.25);
+}
+
+legend {
+  font-style: italic;
+  font-size: 1.1em;
+  padding: 5px;
+}
+
+form input, form select, form textarea {
+  display: inline-block;
+  margin-bottom: 10px;
+  padding: 10px;
+  width: 80%;
+}
+
+form input[type="radio"],
+form input[type="submit"] {
+  width: auto;
+}
+
+
+.styled {
+  border: 0;
+  line-height: 2.5;
+  margin: 15px;
+  padding: 0 20px;
+  font-size: 1rem;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: rgba(220, 0, 0, 1);
+  background-image: linear-gradient(to top left,
+                                    rgba(0, 0, 0, .2),
+                                    rgba(0, 0, 0, .2) 30%,
+                                    rgba(0, 0, 0, 0));
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+              inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+.styled:hover {
+  background-color: rgba(255, 0, 0, 1);
+  cursor: pointer;
+}
+
+.styled:active {
+  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+              inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
