--- a/Style.css
+++ b/Style.css
@@ -197,7 +197,7 @@ animation-duration: 0.5s;
 /* Bouton servant à fermer la fenêtre modale */
 .closebtn {
 text-decoration: none;
-float: left;
+float: right;
 font-size: 35px;
 font-weight: bold;
 color: red;
@@ -243,19 +243,14 @@ legend {
   padding: 5px;
 }
 
-form input, form select, form textarea {
+form input, form textarea {
   display: inline-block;
   margin-bottom: 10px;
   padding: 10px;
   width: 80%;
 }
 
-form input[type="radio"],
-form input[type="submit"] {
-  width: auto;
-}
-
-
+/* =========== BOUTON =========== */
 .styled {
   border: 0;
   line-height: 2.5;
