--- a/Style.css
+++ b/Style.css
@@ -162,7 +162,7 @@ padding: 0;
 outline: 0;
 border: 1px #777 solid;
 text-align: justify;
-width: 30%;
+width: 90%;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 animation-name: slideDownFadeIN;
 animation-duration: 0.5s;
@@ -255,6 +255,9 @@ form input, form textarea {
   .logo {
     width: 300px;
   }
+  .modal-dialog .modal-content {
+    width: 60%;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -265,4 +268,7 @@ form input, form textarea {
     flex-direction: row;
     justify-content: space-between;
   }
+  .modal-dialog .modal-content {
+    width: 30%;
+    }
 }
